spacing bug. way too big.

--- a/docs/_sass/page.scss
+++ b/docs/_sass/page.scss
@@ -24,7 +24,7 @@ body {
   padding-top: 30px;
   padding-bottom: 30px;
   line-height: 30px;
-  margin-bottom: 50em;
+  margin-bottom: 5em;
 }
 
 .main-content p {
